--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -235,7 +235,7 @@
                         <div class="app-details">
                             <h5>Application</h5>
                             <ul>
-                                <li>GroupId: <code>com.senac</code></li>
+                                <li>GroupId: <code>com.fabriciojr</code></li>
                                 <li>ArtifactId: <code>exemplo</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                                 <li>Quarkus Version: <code>2.16.6.Final</code></li>
